turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:25: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
		case (_,STOPP,_) => MVT_SUIVANT = STOPP
                     ^Turmite:26: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
		case (_,RIEN,_) => avance(); MVT_SUIVANT = RIEN
                     ^Turmite:27: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: Array[Int]
		case (_,GAUCHE,_) => gauche(); avance(); MVT_SUIVANT = GAUCHE
                     ^Turmite:28: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Array[Int]
		case (_DEMITOUR,_) => gauche(); gauche(); MVT_SUIVANT = DEMITOUR
                     ^Turmite:29: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: Array[Int]
		case (_DROITE,_) => droite(); avance(); MVT_SUIVANT = DROITE
                     ^