turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;
var MVT_SUIVANT = 0;

val STOPP = 0;
val RIEN = 1;
val GAUCHE = 2;
val DEMITOUR = 4;
val DROITE = 8;

def brosse(couleur:Color)
{
	setCouleurBrosse(couleur); baisseBrosse(); leveBrosse()
}

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) 
{
   	var pos = 0
	
	while(colors(pos)!=getCouleurSol())
		pos = pos+1

	rule(state)(pos) match
	{
		case (_,STOPP,_) => MVT_SUIVANT = STOPP
		case (_,RIEN,_) => avance(); MVT_SUIVANT = RIEN
		case (_,GAUCHE,_) => gauche(); avance(); MVT_SUIVANT = GAUCHE
		case (_DEMITOUR,_) => gauche(); gauche(); MVT_SUIVANT = DEMITOUR
		case (_DROITE,_) => droite(); avance(); MVT_SUIVANT = DROITE
	}
	
	if(pos!=colors.length-1)
		brosse(colors(pos+1))
	else brosse(colors(0))

	state = state +1
}
